--- a/buyOne.css
+++ b/buyOne.css
@@ -70,7 +70,7 @@ body {
     width: auto;
     height: 290px;
     float: right;
-    padding: 0 2% 0 20%
+    padding: 0 8% 0 20%
 }
 
 .img21 {
@@ -810,11 +810,18 @@ a::after {
         margin: 0 10% 0 13%;
     }
 
-    .imgb1 {
+    /* .imgb1 {
         width: auto;
         height: 135px;
         float: right;
         padding: 8% 25% 0 13%;
+    } */
+
+    .imgb1 {
+        width: auto;
+        height: 135px;
+        float: right;
+        padding: 8% 31% 0 13%;
     }
 
     .img21 {
@@ -886,11 +893,11 @@ a::after {
     }
 
     .pack2 {
-        width: 16.5%;
+        width: 20.5%;
         cursor: pointer;
         padding: 2%;
         border-radius: 8px;
-        margin: 0 9% 0 0;
+        margin: 0 7% 0 0;
     }
 
     .pack2-active {
@@ -904,11 +911,11 @@ a::after {
     }
 
     .pack3 {
-        width: 20.5%;
+        width: 27.5%;
         cursor: pointer;
         padding: 2%;
         border-radius: 8px;
-        margin: 0 4% 0 0;
+        margin: 0 0% 0 0;
     }
 
     .pack3-active {
@@ -1029,7 +1036,7 @@ a::after {
     }
 
     .pack-active {
-        width: 16%;
+        width: 15%;
         cursor: pointer;
         padding: 2%;
         border-radius: 8px;
@@ -1038,8 +1045,13 @@ a::after {
     }
 
     .b1d-l5 {
-
-        display: none;
+        width: 123px;
+        font-weight: 400;
+        font-size: 27px;
+        line-height: 36px;
+        letter-spacing: 0.477465px;
+        color: #DB3022;
+        margin: 3% 0 0 15%;
     }
 
     .b1m-l5 {
@@ -1132,9 +1144,9 @@ a::after {
         margin: 3% 0 0 14%;
     }
 
-    .b1d-l5 {
+    /* .b1d-l5 {
         display: none;
-    }
+    } */
 
     .b1m-l5 {
         width: 123px;
