--- a/main.css
+++ b/main.css
@@ -12,12 +12,13 @@ body {
 .navbar {
     overflow: hidden;
     position: fixed;
-    top: 0;
+    top: 0px;
     width: 100%;
     box-shadow: 0px 5px 3px -5px rgb(100, 100, 100);
     background-color: white;
     opacity: 0.9;
     z-index: 200;
+    padding-top: 5px;
 }
 
 .navbar a {
@@ -27,6 +28,10 @@ body {
     text-decoration: none;
 }
 
+.nlogo {
+    height: 2rem;
+    width: auto;
+}
 
 .hash {
     color: rgb(0, 0, 0);
@@ -39,15 +44,26 @@ body {
     margin: 0 45% 0 20%;
 }
 
-.buy-btn {
+/* .buy-btn {
     font-family: Roboto;
-    font-size: 19px;
+    font-size: 15px;
     border: none;
     margin: 16px 0 0 0;
     background-color: red;
     border-radius: 16px;
     color: white;
-    padding: 3px 15px 3px 15px;
+    padding: 6px 15px 6px 15px;
+    cursor: pointer;
+} */
+.buy-btn {
+    font-family: Roboto;
+    font-size: 16px;
+    border: none;
+    margin: 12px 0 0 0;
+    background-color: red;
+    border-radius: 18px;
+    color: white;
+    padding: 8px 20px 8px 20px;
     cursor: pointer;
 }
 
@@ -452,6 +468,8 @@ body {
     color: white;
     padding: 7px 15px 7px 15px;
     cursor: pointer;
+    vertical-align: 4px;
+
 }
 
 .home11 {
@@ -473,8 +491,8 @@ body {
 
 .h11-txt1 {
     width: 255px;
-    font-weight: 400;
-    font-size: 25px;
+    font-weight: 600;
+    font-size: 28px;
     line-height: 68px;
     letter-spacing: 0.576px;
     color: #1D1D1F;
@@ -511,6 +529,50 @@ body {
     background-color: #EEEEEE;
 }
 
+
+.ft-row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 76%;
+    /* align-self: center; */
+    margin-left: 13%;
+}
+
+.ft-col1 {
+    width: 50%;
+    /* padding: 0 0 0 13% */
+}
+
+.ft-col2 {
+    width: 50%;
+    /* padding: 0 0 0 9%; */
+}
+
+.img19 {
+    margin: 2px 0 0 0;
+    width: 300px;
+}
+
+.ft-line2 {
+    /* width: 179px; */
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 16px;
+    vertical-align: 12px;
+    margin: 0 1% 0 0;
+    float: right;
+
+}
+
+.ft-line1 {
+    /* width: 179px; */
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 16px;
+    vertical-align: 6px;
+    margin: 0 1% 0 0;
+}
+
 .h13-line1 {
     /* width: 179px; */
     font-weight: 600;
@@ -518,6 +580,24 @@ body {
     line-height: 16px;
     vertical-align: 4px;
     margin: 0 1% 0 0;
+}
+
+.h13-linef {
+    font-weight: 800;
+    font-size: 45px;
+    line-height: 68px;
+    text-align: center;
+    letter-spacing: 0.576px;
+    color: #000000;
+    margin: 4% 0 0 0;
+}
+
+.h13-linef2 {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 60px;
+    letter-spacing: 0.576px;
+    color: #1D1D1F;
 }
 
 .img19 {
@@ -577,6 +657,132 @@ body {
     text-align: center;
     color: #939393;
 }
+
+.accordion {
+    background-color: #F9F9F9;
+    color: rgb(31, 31, 31);
+    cursor: pointer;
+    padding: 0;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+
+.accordion:after {
+    content: url(./images/down.png);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    float: right;
+    margin: 1.5rem 5px 0rem 0;
+}
+
+.active:after {
+    content: url(./images/up.png);
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: #F9F9F9;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    text-align: left;
+    /* color: grey; */
+    width: 97%;
+    margin-left: 0%;
+}
+
+.acc-row {
+    padding: 2% 0 2% 0;
+    margin: 0 0 0 -1.5%;
+}
+
+.acc-head {
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 25px;
+
+    color: #55565A;
+}
+
+.acc-body {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.acc-bcol1 {
+    width: 50%;
+    float: right;
+
+}
+
+.img32 {
+    width: 270px;
+    height: auto;
+    float: right;
+    margin: 2% 4% 0 0;
+}
+
+.acc-bcol2 {
+    width: 35%;
+    float: left;
+    padding: 4% 0 0 0px;
+
+}
+
+.acc-txt1 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: #55565A;
+}
+
+.acc-txt2 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    color: #55565A;
+}
+
+.acc-hr {
+    width: 100%;
+    color: grey;
+}
+
+.acc-des {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.acc-des1 {
+    width: 50%;
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 25px;
+    color: #55565A;
+    float: left;
+}
+
+.acc-des2 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+    color: #55565A;
+    width: 50%;
+    float: left;
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -773,6 +979,33 @@ body {
     .h7-col2 img {
         margin: 12% 0 0 0%;
     }
+
+    .ft-line1 {
+        width: 178px;
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 16px;
+        vertical-align: 4px;
+        margin: 0 1% 0 16px;
+    }
+
+    .ft-line2 {
+        /* width: 179px; */
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 16px;
+        vertical-align: 12px;
+        margin: 0 1% 0 -5%;
+    }
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1080,6 +1313,119 @@ body {
         color: #939393;
     }
 
+    .ft-line1 {
+        width: 178px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        vertical-align: 4px;
+        margin: 0 1% 0 16px;
+    }
+
+    .ft-line2 {
+        /* width: 179px; */
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        vertical-align: 12px;
+        margin: 0 1% 0 -5%;
+    }
+
+    .ft-line2 {
+        /* width: 179px; */
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        vertical-align: 12px;
+        margin: 0 1% 0 28%;
+    }
+
+
+    .h13-linef {
+        font-weight: 800;
+        font-size: 32px;
+        line-height: 68px;
+        text-align: center;
+        letter-spacing: 0.576px;
+        color: #000000;
+        margin: 4% 0 0 0;
+    }
+
+    .h13-linef2 {
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 28px;
+        letter-spacing: 0.576px;
+        color: #1D1D1F;
+    }
+
+    .h11-l1 {
+        background-color: #F9F9F9;
+        border-radius: 35px;
+        padding: 0 5% 0 5%;
+    }
+
+    .acc-head {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+        color: #55565A;
+    }
+
+    .img32 {
+        width: 195px;
+        height: auto;
+        float: right;
+        margin: 2% 4% 0 0;
+    }
+
+    .acc-txt1 {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 25px;
+        color: #55565A;
+    }
+
+    .acc-txt2 {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: #55565A;
+    }
+
+    .acc-des1 {
+        width: 50%;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 22px;
+        color: #55565A;
+        float: left;
+    }
+
+    .acc-des2 {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 21px;
+        color: #55565A;
+        width: 50%;
+        float: left;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1108,29 +1454,33 @@ body {
         margin: 0 0 2% 0;
     }
 
+    .col1-hm2 {
+        width: 99%;
+    }
+
     .img2 {
         margin: 12% 0 0% 20%;
         height: auto;
-        width: 65%;
+        width: 55%;
     }
 
     .right-hm2 {
-        padding: 15% 0% 12% 0%;
-        width: 50%;
+        padding: 15% 0% 12% 10%;
+        width: 80%;
     }
 
     .line5 {
-        width: 172px;
+        width: 90%;
         font-style: normal;
         font-weight: 400;
-        font-size: 11px;
-        line-height: 14px;
+        font-size: 14px;
+        line-height: 16px;
         text-align: center;
         letter-spacing: 0.196px;
     }
 
     .line6 {
-        width: 172px;
+        width: 90%;
         font-weight: 400;
         font-size: 14px;
         line-height: 18px;
@@ -1143,7 +1493,7 @@ body {
         font-family: Roboto;
         font-size: 14px;
         border: none;
-        margin: 0px 0 0 25%;
+        margin: 0px 0 0 -5%;
         background-color: red;
         border-radius: 16px;
         color: white;
@@ -1225,22 +1575,22 @@ body {
     }
 
     .h5-col1 {
-        width: 36%;
-        padding-left: 7%;
+        width: 100%;
+        padding-left: 28%;
     }
 
     .h5-col1 img {
         width: auto;
-        height: 250px;
+        height: 330px;
     }
 
     .h5-col2 {
-        width: 28%;
-        padding: 15% 6% 0% 0;
+        width: 100%;
+        padding: 8% 6% 10% 18%;
     }
 
     .h5-col2 img {
-        width: 177px;
+        width: 250px;
     }
 
     .h5-col3 {
@@ -1289,7 +1639,7 @@ body {
         font-family: Roboto;
         font-size: 25px;
         font-weight: 600;
-        margin: 0 10% 0 13%;
+        margin: 0 28% 0 1%;
     }
 
     .line7 {
@@ -1323,7 +1673,7 @@ body {
     .h12-line2 {
         width: 90%;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 12.5px;
         line-height: 25px;
         text-align: center;
         letter-spacing: 0.231px;
@@ -1346,8 +1696,8 @@ body {
 
     .h11-txt1 {
         width: 255px;
-        font-weight: 400;
-        font-size: 16px;
+        font-weight: 600;
+        font-size: 18px;
         line-height: 68px;
         letter-spacing: 0.576px;
         color: #1D1D1F;
@@ -1361,7 +1711,7 @@ body {
 
     .img18 {
         width: 192px;
-        margin: 9% 0 0 0;
+        margin: 3% 0 0 0;
     }
 
     .sup1 {
@@ -1371,6 +1721,134 @@ body {
     .sup2 {
         font-size: 12px;
     }
+
+
+    .ft-row {
+        display: flex;
+        flex-wrap: wrap;
+        width: 76%;
+        /* align-self: center; */
+        margin-left: 9%;
+    }
+
+    .ft-col1 {
+        width: 99%;
+        padding: 0 0 0 25%;
+    }
+
+    .ft-line1 {
+        width: 178px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        vertical-align: 4px;
+        margin: 0 1% 0 25px;
+    }
+
+    .ft-col2 {
+        width: 100%;
+        padding: 5% 0 0 17%;
+    }
+
+    .ft-line2 {
+        /*  width: 179px; */
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        vertical-align: 12px;
+        margin: 0 1% 0 5%;
+        float: left;
+
+    }
+
+    .h13-linef {
+        font-weight: 800;
+        font-size: 26px;
+        line-height: 52px;
+        text-align: center;
+        letter-spacing: 0.576px;
+        color: #000000;
+        margin: 4% 0 0 0;
+    }
+
+    .h13-linef2 {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 40px;
+        letter-spacing: 0.576px;
+        color: #1D1D1F;
+    }
+
+    .col2-hm2 {
+        width: 100%;
+    }
+
+    .img32 {
+        width: 195px;
+        height: auto;
+        float: left;
+        margin: 2% 4% 0 25%;
+    }
+
+    .acc-bcol1 {
+        width: 100%;
+        float: left;
+    }
+
+    .acc-bcol1 {
+        width: 100%;
+        float: left;
+    }
+
+    .img32 {
+        width: 195px;
+        height: auto;
+        float: left;
+        margin: 5% 4% 0 25%;
+    }
+
+    .acc-bcol2 {
+        width: 94%;
+        /* float: left; */
+        padding: 4% 0 0 0px;
+        text-align: center;
+    }
+
+    .acc-head {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 25px;
+        color: #55565A;
+    }
+
+    .acc-des1 {
+        width: 50%;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 19px;
+        color: #55565A;
+        float: left;
+    }
+
+    .acc-des2 {
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 18px;
+        color: #55565A;
+        width: 50%;
+        float: left;
+    }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
